add metadata processing

--- a/notebooks/preprocess-combine.ipynb
+++ b/notebooks/preprocess-combine.ipynb
@@ -151,10 +151,10 @@
    },
    "outputs": [],
    "source": [
-    "with open(imagepath + '/conf.json') as infile:\n",
-    "    conf = json.load(infile)\n",
-    "framesPerVolume = conf['framesPerVolume']\n",
-    "numberImagingVolumes = conf['volumes']"
+    "with open(imagepath + '/meta.json') as infile:\n",
+    "    meta = json.load(infile)\n",
+    "framesPerVolume = meta['nplanes']\n",
+    "numberImagingVolumes = meta['shape'][0]"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "outputs": [],
    "source": [
     "with open(join(path, 'sync.json'), 'w') as outfile:\n",
-    "    json.dump(sync, outfile)"
+    "    json.dump(sync, outfile, indent=2)"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
