--- a/notebooks/preprocess-drop.ipynb
+++ b/notebooks/preprocess-drop.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "with open(join(path, 'drop.json'), 'w') as outfile:\n",
-    "    json.dump(drop, outfile)"
+    "    json.dump(drop, outfile, indent=2)"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Update conf"
+    "### Update meta"
    ]
   },
   {
@@ -258,9 +258,9 @@
    },
    "outputs": [],
    "source": [
-    "with open(join(imagepath, 'conf.json')) as infile:\n",
-    "    conf = json.load(infile)\n",
-    "conf['volumes'] = len(covariates)"
+    "with open(join(imagepath, 'meta.json')) as infile:\n",
+    "    meta = json.load(infile)\n",
+    "meta['shape'] = [len(covariates)] + meta['shape'][1:]"
    ]
   },
   {
@@ -271,8 +271,8 @@
    },
    "outputs": [],
    "source": [
-    "with open(join(imagepath, 'conf.json'), 'w') as outfile:\n",
-    "    json.dump(conf, outfile)"
+    "with open(join(imagepath, 'meta.json'), 'w') as outfile:\n",
+    "    json.dump(meta, outfile, indent=2)"
    ]
   }
  ],
@@ -292,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
