--- a/notebooks/process-register.ipynb
+++ b/notebooks/process-register.ipynb
@@ -139,17 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pixelsPerUm = 600.0/512"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -204,7 +193,7 @@
    },
    "outputs": [],
    "source": [
-    "algorithm = CrossCorr(axis=2)"
+    "algorithm = CrossCorr(axis=0)"
    ]
   },
   {
@@ -227,17 +216,6 @@
    "outputs": [],
    "source": [
     "registered = model.transform(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "registered = data[:,31:31+468,:]"
    ]
   },
   {
@@ -322,7 +300,7 @@
     }
    ],
    "source": [
-    "[plt.plot(model.toarray()[:,i,:]/pixelsPerUm) for i in range(2)];"
+    "[plt.plot(model.toarray()[:,i,:]) for i in range(2)];"
    ]
   },
   {
@@ -419,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
