--- a/notebooks/preprocess-combine.ipynb
+++ b/notebooks/preprocess-combine.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -45,7 +45,8 @@
     "import pandas as pd\n",
     "from glob import glob\n",
     "from os.path import join, exists\n",
-    "import json"
+    "import json\n",
+    "from os import mkdir, makedirs"
    ]
   },
   {
@@ -74,8 +75,8 @@
    },
    "outputs": [],
    "source": [
-    "key = '2016-03-16'\n",
-    "name = 'anm-0350549'"
+    "key = '2016-04-01'\n",
+    "name = 'anm-0326049'"
    ]
   },
   {
@@ -101,7 +102,7 @@
     }
    ],
    "source": [
-    "path = join(directory, 'processed', name, key, 'behavior')\n",
+    "path = join(directory, 'reprocessed', name, key, 'behavior')\n",
     "print exists(path)"
    ]
   },
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -139,19 +140,19 @@
     }
    ],
    "source": [
-    "imagepath = join(directory, 'processed', name, key, 'images')\n",
-    "print exists(imagepath)"
+    "summarypath = join(directory, 'reprocessed', name, key, 'summary')\n",
+    "print exists(summarypath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "with open(imagepath + '/meta.json') as infile:\n",
+    "with open(summarypath + '/meta.json') as infile:\n",
     "    meta = json.load(infile)\n",
     "framesPerVolume = meta['nplanes']\n",
     "numberImagingVolumes = meta['shape'][0]"
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6735\n"
+      "11769\n"
      ]
     }
    ],
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -313,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'numberAcquisitions': 1, 'totalFrames': 6735, 'numberVolumes': 6735, 'framesPerVolume': 1}\n"
+      "{'numberAcquisitions': 1, 'totalFrames': 11769, 'numberVolumes': 11769, 'framesPerVolume': 1}\n"
      ]
     }
    ],
@@ -323,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -373,13 +374,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "savepath = join(directory, 'reprocessed', name, key, 'covariates')\n",
+    "if not exists(savepath):\n",
+    "    makedirs(savepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "covariates.to_csv(join(path, 'covariates.csv'))"
+    "covariates.to_csv(join(savepath, 'covariates.csv'))"
    ]
   },
   {
@@ -391,16 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAZ4AAAEoCAYAAABo75dnAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEEpJREFUeJzt3X2sJQV5gPHnymXBWsAsym5gCSsYXhUoH+IHxmABLaZi\nawmtJhRZEG4LpVEuCGixK2jEypZGSgtupNAWagulUWxDUrkSbIy1H2AqVV9pwVbcLgu7AbRpQeD0\nj5mLt7AfZz/mPXPOPr9ks7Nz9s68LDfnuTN37szUYDBAkqQqLxr1AJKknYvhkSSVMjySpFKGR5JU\nyvBIkkoZHklSqemuNhwRewKXAEdn5s8tWH868EZgEXBTZt7V1QySpP7p8ohnGrhiI+tPy8xzgHOA\n8zvcvySphzoLT2ZuyMwfbuSlZ9vXn6I56pEk7UQ6O9W2wNTGVkbE7sCTW7OhiJgGlgEPZebTO2A2\nSVKxLr/H8wbgFOCVEfEpYHFmngXcEBHX0RztfGozHz8DzDxv9SLgsLm5uedWTF220a5J0kQYrOz9\nbc22+k14apzu1RYRy4EH5+bmWLZsGWB4JE22SQyPl1NLkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEk\nlTI8kqRShkeSVMrwSJJKGR5JUinDI0kqZXgkSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIp\nwyNJKmV4JEmlDI8kqZThkSSVMjySpFKGR5JUyvBIkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEklTI8\nkqRShkeSVMrwSJJKGR5JUinDI0kqZXgkSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJ\nKjXdxUYj4gjgQmAd8FBmXtWunwX2AvYF/iwz7+pi/5Kk/urqiOcCYDYzZ4HjImI+cMdm5krg94GT\nOtq3JKnHOjniAZZk5rp2eQOwmObo586IuIHmiOfSjvYtSeqxro541kTE0nZ5b2B9u3xiZp4BnILh\nkaSdUldHPKuAKyNiPXAHcC0wA/xLRFwOvBT4i81tICJm2o9ZaFEHs0qSCk0NBoNRzzC0iFgOPDg3\nN8eyZcsAmLpsaqQzSVKXBit7/x691W/CXk4tSSpleCRJpQyPJKmU4ZEklTI8kqRShkeSVMrwSJJK\nGR5JUinDI0kqZXgkSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJKmV4JEmlDI8kqZTh\nkSSVMjySpFKGR5JUyvBIkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEklTI8kqRShkeSVMrwSJJKGR5J\nUinDI0kqZXgkSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJKmV4JEmlDI8kqdR0VxuO\niCOAC4F1wEOZeVW7/h3AW4Fdgesz896uZpAk9U+XRzwXALOZOQscFxHzkZuhidGTwMMd7l+S1ENd\nhmdJZq5rlzcAi9vlQ4BPAlcBl3a4f0lSD3UZnjURsbRd3htY3y4/kpkD4Algtw73L0nqoc6+xwOs\nAq6MiPXAHcC1NKfZromIG9q/8+lNfXBEzLR/f6FFXQwqSaozNRgMRj3D0CJiOfDg3Nwcy5YtA2Dq\nsqmRziRJXRqs7P179Fa/CXs5tSSplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJKmV4JEmlDI8k\nqdQWb5kTERcDnweOAc4G7s7MD3c9mCRpMg1zxPPqzEzgvcCbgf26HUmSNMmGCc9LIuKtwLfau0rv\n2fFMkqQJNkx4VgPvBD4WEccAt3c7kiRpkg3zWIQTM/P97fLDwNc6nEeSNOGGCc8rIuJK4PvzKzLz\n6u5GkiRNsmHC46k1SdIOM8z3eG4HlgD7A18E/r7TiSRJE22Y8FwP/DtwCPAscGWnE0mSJtow4Xk8\nM28D/iczHwMe7XgmSdIEGyY8u0XERcDyiPhNYPeOZ5IkTbBhwrMC+C9gDtjQ/lmSpG0yzFVtn2x/\nnwL2Bo6KiA3ADZm5prPJJEkTaahb5gDfo7mi7QHgp4Hv0lx0IEnSVhkmPC/KzKsz88uZeQ3wTGbe\nCqzreDZJ0gQa5lTb0ohYRXPngn2BgyLiTcCLO51MkjSRhgnPLwFvAZYC3wE+QvP9nvd0OJckaUIN\nE55b2t+ngAEwQ3N129XANzuaS5I0oYYJzwPAV4D7gNfQHP3cQnMHg7d3N5okaRINE56XZ+b8jUIf\niIhfzMx/jIj1XQ4mSZpMw4RnEBF/yU8uLpiKiBOAxzqdTJI0kbYYnsxcEREH0Vxc8GhmZvvSXKeT\nSZIm0iZ/jicibmx/vxe4FbgG+POIuKdmNEnSJNrkEU9mrmgXfyUz768ZR5I06Ya5c8HKzqeQJO00\nNvs9nohYChwWEWuBNbQ/y5OZR1UMJ0maPFu6uGB1Zh5eMokkaaewpfBMR8QeNEc6z8nMJ7obSZI0\nybYUntcDX+D/h2cAHN/ZRJKkibal8HwtM99ZMokkaaewpava/qNkCknSTmOz4cnM86oGkSTtHIb5\nOR5JknYYwyNJKmV4JEmlhnkswlaLiCOAC4F1wEOZedWC114JfBU4MjPXdLF/SVJ/dXXEcwEwm5mz\nwHERMQ0QEbsDFwN3drRfSVLPdRWeJZm5rl3eACxuly8DPgY81dF+JUk918mpNmBNRCzNzLXA3sD6\niNif5mFyZwBHAGcBl29qAxExA8w8b/WijuaVJBXpKjyrgCsjYj1wB3BtZs4ApwNExAHAZze3gcxc\nDaxeuC4ilgMPdjGwJKlGJ+HJzPuA0zbz+pld7FeS1H9eTi1JKmV4JEmlDI8kqZThkSSVMjySpFKG\nR5JUyvBIkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEklTI8kqRShkeSVMrwSJJKGR5JUinDI0kqZXgk\nSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJKmV4JEmlDI8kqZThkSSVMjySpFKGR5JU\nyvBIkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEklTI8kqRShkeSVMrwSJJKGR5JUinDI0kqZXgkSaUM\njySp1HQXG42II4ALgXXAQ5l5Vbv+/cCrgD2BP87Mv+1i/5Kk/urqiOcCYDYzZ4HjImI+cN/IzHOA\njwI/39G+JUk91lV4lmTmunZ5A7AYIDPvjoiXARcBqzratySpxzo51QasiYilmbkW2BtYD8+dgjsH\nuCAzn9jcBiJiBph53upFXQwrSarTVXhWAVdGxHrgDuBamoj8KfAl4CMR8e3M/KNNbSAzVwOrF66L\niOXAgx3NLEkq0El4MvM+4LSNrD+si/1JksaHl1NLkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEklTI8\nkqRShkeSVMrwSJJKGR5JUinDI0kqZXgkSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJ\nKmV4JEmlDI8kqZThkSSVMjySpFKGR5JUyvBIkkoZHklSKcMjSSpleCRJpQyPJKmU4ZEklTI8kqRS\nhkeSVMrwSJJKGR5JUinDI0kqZXgkSaUMjySplOGRJJUyPJKkUoZHklTK8EiSShkeSVIpwyNJKjXd\n1YYj4gjgQmAd8FBmXtWuvxhYCuwNfDIzv9XVDJKk/unyiOcCYDYzZ4HjImI6InYH3pSZ5wMfBmY7\n3L8kqYc6O+IBlmTmunZ5A7AYWAQ80q77AbDvVm5zF4C1a9c+t2L6R13+J0jSaF3xN1dw2uGnjXqM\nTTrhhBOW05zVenrYj+nyXXtNRCzNzLU0p9XWt/t7efv6cuD7m/rgiJgBZp63+iUAp5566nMrDuTA\nHTexJPXMjbffyI3cOOoxNudB4BXA94b9gKnBYNDJJBFxKHAxTXDuBw7PzJmIOB84gOYI6OOZ+d2t\n2OZuwDeAk4BndvzUnbkd+IVRD7EVxm1eGL+Zx21ecOYK4zYvNDMftTVHPAwGg7H6dfDBB//TqGeY\n9JnHbd5xnHnc5nVm592RM3s5tSSplOGRJJUyPJKkUuMYntWjHmAbjNvM4zYvjN/M4zYvOHOFcZsX\ntmHmzq5qkyRpY8bxiEeSNMYMjySplOGRJJUyPJKkUmNzh81NPWahTyJiT+AS4LWZeWJE/C7wLM1j\nID4I/AzwHuB/gb/LzM+NbFggIl4NrATWAgOaWXs7L0BEHElz5/P1wFM0Xzz1emaAiLgNuIfmVlG9\nnjciTqeZ6Ts0N/h9Kf2feTHwceCHwMPAa2g+R5YA5wK/DLyR5kbFN2XmXSMaFYCIOBU4uv3jO4Cv\n0ON5ASLiMOA3aP59d6fpxzZ9XozTEc8LHrMw6oE2Yhq4ApiKiIOAn8rMDwLXAWcBHwDOysxzgRUj\nm/InBsB5mfkB4FD6Py/Ak8C5mfl+4EjGYOaImAW+3v6x9/O2fkRzP8S1jMfMvwY8CjxNc/Ph+zPz\nYuBLwMnAr2bmOcA5wPkjm7KVmTe3j4f5B+BD9Hze1tuAmzNzJfA6tuPzYpzCs7HHLPRKZm7IzB8C\nUzRfBfygfWkNsB+wS2Y+264b+XXsmfmdzHw0Ij5A8xVXr+cFaB8ceGBE/BVwFz2fOSJ+luZN/Os0\nnxe9nrf1BeDszLwQeDfNrNDvmQ8E7s7M3wI+xwv/nZ8FyMynaI4iRq59PtlJNEcPvZ8XuA347Yj4\nQ5r/79v8uTxO4VkTEUvb5fnHLPTZGmD/dvkAmq/CfrzgSG1qJFMtEBGLIuJamq+6bqLn8wJExNFA\nZubJwOvp/8zvovkiZAVwHPDmdn1f5wUIYNd2+RmaR5hAv2deu2D5YV448xQ892b/ZOlkm3YyTeR/\nwAs/j/s47yzNFyTnAo+xHZ8XY/MDpM9/zEJm/sGIR3qBiHgDcEr761aa6u8C7ENzqvBQ4L0050Dv\nzMzbRjQqABFxCc0b4fzjx6faX72cFyAijgfOpDmtsgfN9/x2pcczA0TEsTT/1nvQ83kj4nU0p3/+\njeZNb5r+z7wfcDXNM2EeoXlTfAJ4Gc3pqpOBt9AcPVyfmV8dyaALRMTVwKeBB4Br6f+8x9O8tz1C\n88XUY2zj+9vYhEeSNBnG6VSbJGkCGB5JUinDI0kqZXgkSaUMjySplOGRJJUyPNIOFBE37oBtHBIR\n121k/esjYtX2bl8aNX+OR9oGEXENzU9sH0Nz54enaX6q++EdsO0vAu9bcIuoha9dD6zKzG9v736k\nUenjjTal3svM8wAi4svAu9t79BER92bmkRFxH3ALcCzNPeVeDLwBeDvwWpq7gj/WbCovn99uRCwD\nnsnMdRHxNmAG+G/g25n5O8DNwBnARTX/pdKO56k2afvM32Zo3vwphD3aoHwG2CczL6W5h1gAnwDO\nzMxTgaMjYp8FH38UcG+7fBLwmcxcAXy+XXcPTbiksWV4pG7M38T2qQXLP6a559m+wBURcQOwG819\nr+btBTzeLn8CeFd7VHVMu+5xYM8O55Y6Z3ikbmzu7rz/SfNsqTOAXwe+ueC1x2niA3Bge0rvBODs\ndt1eNDeTlMaW3+ORts+mrs7Z2PpB++ujwJ9ExAbgqcycWfB37gXe1y6/KiIuognN3e26I4F/3t6h\npVHyqjapZyLir4EVmfnoRl77LPB7mfmv9ZNJO4an2qT++RBw+fNXtg/Be9zoaNx5xCNJKuURjySp\nlOGRJJUyPJKkUoZHklTK8EiSShkeSVKp/wOayeXXqIicfQAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAaEAAAEoCAYAAADxF07SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEcFJREFUeJzt3X+QXWV9x/H3agxYC7QByQ7iGNHyVYEKSFWoo8UoOlQr\nrdQ6bdGgsG0srbIgUH+hiEVNSltKi2yl0VZKqzJjgQ4dQBksjrVa41SqfnUqVkOEhWQg2lEQ2P5x\nzsISN8kNu88+95z7fs3s5Oxz9z7n+2R372fPued5ztjMzAySJNXwmNoFSJJGlyEkSarGEJIkVWMI\nSZKqMYQkSdUYQpKkapaV6jgi9gbOAY7KzOPmtL8eeD6wHPhYZt5YqgZJ0nAreSS0DLhgnvaTMnMt\nsBY4veD+JUlDrlgIZebWzPzBPA892D5+H83RkCRpRBU7HTfH2HyNEbEncO/udBQRy4ADgU2Zef8i\n1CZJqqjke0LPA04Enh4RHwRWZOYpwIaI+BDNUdAHd/L8CWBiu+blwGHnf+R8xt4zb7ZJUi9MHDnB\npa+8tHYZg1jQi3GxEMrMLwBfAN66XfsVwBUDPH8KmJrbFhGrgFsXr0pJGk5jY6Pxh7aXaEuSqjGE\nJEnVGEKSpGoMIUlSNYaQJKkaQ0iSVI0hJEmqxhCSJFXTyRCaYaZ2CZJU1NjCFiLojE6GkCSpHwwh\nSRpCLtsjSVJhhpAkqRpDSJJUjSEkSarGEJIkVdPJEHKekCT1QzdDaMYQktRvTlaVJKkwQ0iSVI0h\nJEmqxhCSJFVjCEnSEHLtOEmSCjOEJEnVdDKEnKwqSf3QzRBysqqknnOyqiRJhRlCkjSERuVtB0NI\nklSNISRJqsYQkiRVYwhJkqoxhCRJ1XQyhEblqhFJo8t5QkPMyaqS+s4FTCVJKswQkiRVYwhJkqox\nhCRJ1RhCkqRqDCFJUjWGkCSpmmUlOo2Iw4EzgWlgU2Ze2LZPAvsABwD/kJk3lti/JKkbSh0JnQFM\nZuYkcGxEzIbdCzPzXOAvgVc82s6drCqp70ZlxYQiR0LAysycbre3AitojopuiIgNNEdC7yi0b0nq\nPFdMWJjNETHebu8LbGm3X5aZJwMnYghJ0sgrdSS0HlgXEVuAa4FLgAngvyLiPODngH/aWQcRMdE+\nZ67lBWqVJFVSJIQy8xbgpHna374bfUwBU3PbImIVcOtC65MkDQcv0ZYkVWMISZKqMYQkSdV0MoS8\ns6ok9UM3Q8jJqpJ6blQmq3YyhCRJ/WAISZKqMYQkSdUYQpI0hFw7TpJUzahcgGUISZKqMYQkSdV0\nMoScrCpJ/dDNEBqRc6WSRpcXJkiSVJghJEmqxhCSJFVjCEmSqjGEJEnVGEKSpGoMIUkaQt5PaIg5\nWVWS+qGbIeRkVUk952RVSZIKM4QkSdUYQpKkagwhSVI1hpAkqRpDSJJUjSEkSarGEJKkIeSKCUPM\nFRMk9Z2TVSVJKswQkiRVYwhJkqoxhCRJ1RhCkqRqDCFJUjWGkCSpmk6GkPOEJKkfuhlC3llVknqh\nkyEkSeoHQ0iSVM2yUh1HxOHAmcA0sCkzL2zbfxV4CfA44LLM3FiqBknqKhcwXbgzgMnMnASOjYjZ\nwJugCaZ7gTsK7l+SNORKhtDKzJxut7cCK9rtQ4D3AxcC7yi4f0nSkCsZQpsjYrzd3hfY0m7fmZkz\nwDZgj4L7lyQNuWLvCQHrgXURsQW4FriE5lTcxRGxof2av9jRkyNiov36uZaXKFSSVEexEMrMW4CT\n5mm/HLh8gOdPAVNz2yJiFXCrk1UlqR86eYm2k1Ul9Z13VpUkqTBDSJJUjSEkSarGEJIkVWMISZKq\nMYQkaQi5dpwkSYV1MoScrCpJ/bDLFRMi4mzgU8DRwKnATZn5ttKF7YyTVSX1nZNVH/bMzEzgdcAL\ngCeVLUmSNCoGCaEnRMRLgK+1q1/vXbgmSdKIGCSEpoBXAu+NiKOBq8qWJEkaFYOsov2yzHxzu30H\n8PmC9UiSRsggIfTUiFgHfG+2ITMvKleSJGlUDBJCnn6TJBUxyHtCVwErgScDVwP/XrQiSdLIGCSE\nLgP+BzgEeBBYV7QiSZLL9sxxT2ZeCfwoM+8G7ipc0y45WVVS3zlZ9WF7RMRZwKqI+ENgz8I1SZJG\nxCAhtAb4PvBpYGv7uSRJCzbI1XHvb/8dA/YFjoyIrcCGzNxcrDJJGmGj8rbDQMv2AN+huTLu28DP\nAt+kuWBBkqRHbZAQekxmXpSZn8nMi4EHMvMTwHTh2iRJPTfI6bjxiFhPs2LCAcDTIuIY4PFFK5Mk\n9d4gIfTrwIuAceAbwDtp3h96bcG6JEkjYJAQ+nj77xgwA0zQXCV3EfDVQnVJkkbAICH0beCzwC3A\ns2iOij5Os3LCy8uVtmPe3luS+mGQEHpiZs4uYvrtiHhVZn4xIraULGxnRuXSRUmja1RWTBgkhGYi\n4pM8fGHCWESsBu4uWpkkjbBRWTtulyGUmWsi4mk0FybclZnZPvTpopVJknpvh/OEIuIj7b8bgU8A\nFwP/GBFfXprSJEl9t8Mjocxc026+JjO/tTTlSJJGySArJpxbvApJ0kja6XtCETEOHBYRtwObaecK\nZeaRS1GcJKnfdnVhwlRmPntJKpEkjZxdhdCyiNgLHnmtYGZuK1fSrjlZVZL6YVch9Fzgn3lkCM0A\nLy5W0QCcrCqp75ys2vh8Zr5ySSqRJI2cXV0d979LUoUkaSTtNIQy87SlKkSSNHoGmSckSVpio7J2\nnCEkSarGEJIkVTPIrRx2W0QcDpwJTAObMvPCOY89HfgccERmbi6xf0lSN5Q6EjoDmMzMSeDYiFgG\nEBF7AmcDNyykcyerSlI/lAqhlZk53W5vBVa02+8B3gvct5DOnawqqe+crLowmyNiPDNvB/YFtkTE\nk2lujHcycDhwCnDejjqIiAlgYrvm5YXqlSRVUCqE1gPrImILcC1wSWZOAK8HiIinAB/eWQeZOQVM\nzW2LiFXArSUKliQtvSIhlJm3ACft5PE3lNivJKlbvERbklSNISRJqsYQkiRVYwhJkqoxhCRJ1XQy\nhFwxQVLfuYq2JEmFGUKSpGoMIUlSNYaQJKkaQ0iSVI0hJEmqxhCSJFXTyRBynpCkvhuVm9p1M4S8\ns6qknnOyqiRJhRlCkqRqDCFJUjWGkCSpGkNIklSNISRJqsYQkiRV08kQcrKqJPVDN0PIyaqSes4V\nEyRJKswQkiRVYwhJ0hBy7ThJkgozhCRJ1RhCkqRqDCFJUjWdDCEnq0pSP3QzhJysKkm90MkQkiT1\ngyEkSarGEJIkVWMISZKqMYQkaQi5irYkSYUZQpKkagwhSVI1nQwhJ6tK6jtv5SBJUmHLSnQaEYcD\nZwLTwKbMvLBtfzPwDGBv4KOZeV2J/UuSuqHUkdAZwGRmTgLHRsRs2H0lM9cC7waOL7RvSVJHlAqh\nlZk53W5vBVYAZOZNEbEfcBawvtC+JUkdUeR0HLA5IsYz83ZgX2ALPHSabi1wRmZu21kHETEBTGzX\nvLxEsZKkOkqF0HpgXURsAa4FLqEJlL8HrgfeGRFfz8y/3VEHmTkFTM1ti4hVwK2FapYkLbEiIZSZ\ntwAnzdN+WIn9SZK6qZOXaHtnVUl959pxQ8zJqpL6zsmqkiQVZghJkqoxhCRJ1RhCkqRqDCFJUjWG\nkCSpGkNIklRNJ0PIyaqS1A/dDCEnq0rqOVdMkCSpMENIkoaQy/ZIklSYISRJQ2hULsAyhCRJ1RhC\nkqRqDCFJUjWdDKFROVcqSX3XzRBysqqknvMSbUmSCjOEJEnVGEKSpGoMIUkaQi5gKklSYYaQJKka\nQ0iSVI0hJEmqppMh5IoJktQPnQwhSVI/GEKSpGoMIUlSNYaQJKkaQ0iSVI0hJEmqxhCSpCHk/YSG\nmPOEJKkfuhlC3llVknqhkyEkSeoHQ0iSVI0hJEmqxhCSJFVjCEmSqllWquOIOBw4E5gGNmXmhW37\n2cA4sC/w/sz8WqkaJEnDrVgIAWcAk5k5HRFXR8RF7f6OycxXRcSBwLuBUwrWIEmddPP3bubgPHhR\n+npg5gFu/u7NbLt3GwAnPOMEjv+F4xel74UqGUIrM3O63d4KrACWA3e2bbcBB+xmn48F2HrnVpb9\nsGTpklTXNV+6hmu+dE2Rvjd8dgOvfuarWX/c+gX3tXr16lU0Z7vufzTPL/lKvjkixjPzdppTb1va\n/T2xfXwV8L0dPTkiJoCJ7ZqfAHD9uus5iIMWvWBJGhUbr9rI6g+sXoyubgWeCnzn0Tx5rNTqAxFx\nKHA2Tfh8C3h2Zk5ExOnAU2iOjM7PzG/uRp97AF8BXgE8sPhVL7mrgF+rXcQicSzDybEMp76N5chH\neyTEzMxMpz4OPvjgL9WuwbE4lq58OJbh/HAsD394ibYkqRpDSJJUjSEkSaqmiyE0VbuAReRYhpNj\nGU6OZTgtaCzFro6TJGlXungkJEnqCUNIklSNISRJqsYQkiRV05lVQHd0a4guiIhnAucCtwMzwIPt\nxzjwVuAXgdcCPwb+LTOvqFTqwCLiSuDLNMsvdXIsEbECOB/4AXAH8CyaZaZWAm8CfhN4Ps3Cux/L\nzBsrlbpLEXEY8Ac049iT5ne7U9+XiNgbOAd4Tma+LCL+lJ2MAbgGuATYBOyTmWurFD6PecbyPmAv\nmrGcT3MA8NDrGfDnNFeZzf78rc3MH9WofXtzxnJUZh7Xth0D/Etm/vz2r83s5li6dCQ0e2uISeDY\niOhMgNIEz2mZ+RbgUOBnMvOtwIdobmXxFuCUzHwTsKZalQOKiEngC+2nXR7L7wF3AffTLKb7rcw8\nG7ge+A3gd9sXtrXA6dWqHMxLgcsz81zgl+jm92UZcAEwFhFPY9djeA1wdWaeA2yKiF+uU/a8HhpL\n+/l1mflHwN8Aq9nu9axtm/35u4Hm529YzI4FgIjYD/ht4Itt04LG0qUQmu/WEJ2Qmd/IzLsi4i3A\nZ2luYwGwGXgS8NjMfLBtG+pr5iPiV4Af0oTQGB0eC3AQcFNmvh24gp8ey4MAmXkfzdHQMLsSeFdE\n/DXN/3vnvi+ZuTUzf0DzczXOzsfADr5mKMwZy+znN0XEU2mO5C7jp1/P9ufhsdzGkI4lIsaA84C3\nzfmSBY2lSyG0OSLG2+3ZW0N0QkQsj4hLgP8APgY8uX3oKTR/gf9kzpHd2DxdDJMTaH7519D81fOC\ntr2LY7l9zvYdNLcXgYfHMgYQEXsC9y5pZbtvEji1PUq4m58eS5e+L9CEyq5+T26b52uGzezP0EuB\n02hOTW3jka9n+9GcyurCWI6iua/b6cBBEbGGBY6lM5NVt781RGb+VeWSBhYR59C8WM/eynys/dif\n5lD2UOB1NOe6b8jMK2vUuTsi4oU0Y9oLeBwdHEtEPAm4iOY+KHfSvHBvo/lFWktzGuFFNEdBl2Xm\n56oUOoCIeDFwIs04xmmC6LF06PsSEc+jGcOJwCdojth2OAbgX2neE/o+8ITMPK1C2fPabiyfpKn7\no+3Dnwe+SfM+y0OvZxFxKXAP7c9fZg7FHz7zfF/elZk/jojrMvO4+V6bd2csnQkhSVL/dOl0nCSp\nZwwhSVI1hpAkqRpDSJJUjSEkSarGEJIkVWMISYsoIj6yCH0cEhEfmqf9uRGxfqH9S8PEeULSoxAR\nF9PMBj+aZiWM+2lWLLhjEfq+GnjjnKVQ5j52GbA+M7++0P1Iw6BLi4BKQ2N2dn5EfAb4rTlra23M\nzCMi4hbg48ALgRuBxwPPA14OPIdmVfW7m67yvNl+I+JA4IHMnG6XepkA/g/4emZ+ALgcOBk4a2lG\nKpXl6ThpYWaXYJo1e2phrzZcLgX2z8x30KxPF8CfAG/IzN8BjoqI/ec8/0hgY7v9CuDSzFwDfKpt\n+zJNiEm9YAhJZcwusHvfnO2f0KyzdwBwQURsAPagWett1j40a25BE1YntEdbR7dt9wB7F6xbWlKG\nkFTGzlaq/i7N/VdOBn4f+Oqcx+6hCSKAg9rTfquBU9u2fWgWWZV6wfeEpIXZ0ZU987XPtB/vBv4u\nIrYC92XmxJyv2Qi8sd1+RkScRRM6N7VtRwD/udCipWHh1XHSkImIa4A1mXnXPI99GPizzPzvpa9M\nWnyejpOGzx/T3L3yESLiKOAeA0h94pGQJKkaj4QkSdUYQpKkagwhSVI1hpAkqRpDSJJUjSEkSarm\n/wFwq5T0ccMpywAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x5773ad0>"
+       "<matplotlib.figure.Figure at 0x6dbe250>"
       ]
      },
      "metadata": {},
@@ -434,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
