--- a/notebooks/preprocess-drop.ipynb
+++ b/notebooks/preprocess-drop.ipynb
@@ -120,7 +120,7 @@
     }
    ],
    "source": [
-    "path = join(directory, 'processed', name, key, 'behavior')\n",
+    "path = join(directory, 'reprocessed', name, key, 'covariates')\n",
     "print exists(path)"
    ]
   },
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "imagepath = join(directory, 'processed', name, key, 'images')\n",
+    "imagepath = join(directory, 'reprocessed', name, key, 'images')\n",
     "print exists(imagepath)"
    ]
   },
@@ -258,7 +258,8 @@
    },
    "outputs": [],
    "source": [
-    "with open(join(imagepath, 'meta.json')) as infile:\n",
+    "summarypath = join(directory, 'reprocessed', name, key, 'summary')\n",
+    "with open(join(summarypath, 'meta.json')) as infile:\n",
     "    meta = json.load(infile)\n",
     "meta['shape'] = [len(covariates)] + meta['shape'][1:]"
    ]
@@ -271,7 +272,7 @@
    },
    "outputs": [],
    "source": [
-    "with open(join(imagepath, 'meta.json'), 'w') as outfile:\n",
+    "with open(join(summarypath, 'meta.json'), 'w') as outfile:\n",
     "    json.dump(meta, outfile, indent=2)"
    ]
   }
@@ -292,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
