--- a/notebooks/preprocess-drop.ipynb
+++ b/notebooks/preprocess-drop.ipynb
@@ -75,8 +75,8 @@
    },
    "outputs": [],
    "source": [
-    "key = '2016-02-03'\n",
-    "name = 'anm-0307509'"
+    "key = '2016-04-23'\n",
+    "name = 'anm-0330549-5'"
    ]
   },
   {
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "drop = {'trials': []} #range(0,31)"
+    "drop = {'trials': range(323, 500)} #range(0,31)"
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -275,6 +275,15 @@
     "with open(join(summarypath, 'meta.json'), 'w') as outfile:\n",
     "    json.dump(meta, outfile, indent=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
