--- a/notebooks/preprocess-combine.ipynb
+++ b/notebooks/preprocess-combine.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -75,8 +75,8 @@
    },
    "outputs": [],
    "source": [
-    "key = '2016-04-01'\n",
-    "name = 'anm-0326049'"
+    "key = '2016-04-24'\n",
+    "name = 'anm-0330549-6'"
    ]
   },
   {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11769\n"
+      "3482\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -314,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'numberAcquisitions': 1, 'totalFrames': 11769, 'numberVolumes': 11769, 'framesPerVolume': 1}\n"
+      "{'numberAcquisitions': 1, 'totalFrames': 3482, 'numberVolumes': 3482, 'framesPerVolume': 1}\n"
      ]
     }
    ],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -405,16 +405,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAaEAAAEoCAYAAADxF07SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEcFJREFUeJzt3X+QXWV9x/H3agxYC7QByQ7iGNHyVYEKSFWoo8UoOlQr\nrdQ6bdGgsG0srbIgUH+hiEVNSltKi2yl0VZKqzJjgQ4dQBksjrVa41SqfnUqVkOEhWQg2lEQ2P5x\nzsISN8kNu88+95z7fs3s5Oxz9z7n+2R372fPued5ztjMzAySJNXwmNoFSJJGlyEkSarGEJIkVWMI\nSZKqMYQkSdUYQpKkapaV6jgi9gbOAY7KzOPmtL8eeD6wHPhYZt5YqgZJ0nAreSS0DLhgnvaTMnMt\nsBY4veD+JUlDrlgIZebWzPzBPA892D5+H83RkCRpRBU7HTfH2HyNEbEncO/udBQRy4ADgU2Zef8i\n1CZJqqjke0LPA04Enh4RHwRWZOYpwIaI+BDNUdAHd/L8CWBiu+blwGHnf+R8xt4zb7ZJUi9MHDnB\npa+8tHYZg1jQi3GxEMrMLwBfAN66XfsVwBUDPH8KmJrbFhGrgFsXr0pJGk5jY6Pxh7aXaEuSqjGE\nJEnVGEKSpGoMIUlSNYaQJKkaQ0iSVI0hJEmqxhCSJFXTyRCaYaZ2CZJU1NjCFiLojE6GkCSpHwwh\nSRpCLtsjSVJhhpAkqRpDSJJUjSEkSarGEJIkVdPJEHKekCT1QzdDaMYQktRvTlaVJKkwQ0iSVI0h\nJEmqxhCSJFVjCEnSEHLtOEmSCjOEJEnVdDKEnKwqSf3QzRBysqqknnOyqiRJhRlCkjSERuVtB0NI\nklSNISRJqsYQkiRVYwhJkqoxhCRJ1XQyhEblqhFJo8t5QkPMyaqS+s4FTCVJKswQkiRVYwhJkqox\nhCRJ1RhCkqRqDCFJUjWGkCSpmmUlOo2Iw4EzgWlgU2Ze2LZPAvsABwD/kJk3lti/JKkbSh0JnQFM\nZuYkcGxEzIbdCzPzXOAvgVc82s6drCqp70ZlxYQiR0LAysycbre3AitojopuiIgNNEdC7yi0b0nq\nPFdMWJjNETHebu8LbGm3X5aZJwMnYghJ0sgrdSS0HlgXEVuAa4FLgAngvyLiPODngH/aWQcRMdE+\nZ67lBWqVJFVSJIQy8xbgpHna374bfUwBU3PbImIVcOtC65MkDQcv0ZYkVWMISZKqMYQkSdV0MoS8\ns6ok9UM3Q8jJqpJ6blQmq3YyhCRJ/WAISZKqMYQkSdUYQpI0hFw7TpJUzahcgGUISZKqMYQkSdV0\nMoScrCpJ/dDNEBqRc6WSRpcXJkiSVJghJEmqxhCSJFVjCEmSqjGEJEnVGEKSpGoMIUkaQt5PaIg5\nWVWS+qGbIeRkVUk952RVSZIKM4QkSdUYQpKkagwhSVI1hpAkqRpDSJJUjSEkSarGEJKkIeSKCUPM\nFRMk9Z2TVSVJKswQkiRVYwhJkqoxhCRJ1RhCkqRqDCFJUjWGkCSpmk6GkPOEJKkfuhlC3llVknqh\nkyEkSeoHQ0iSVM2yUh1HxOHAmcA0sCkzL2zbfxV4CfA44LLM3FiqBknqKhcwXbgzgMnMnASOjYjZ\nwJugCaZ7gTsK7l+SNORKhtDKzJxut7cCK9rtQ4D3AxcC7yi4f0nSkCsZQpsjYrzd3hfY0m7fmZkz\nwDZgj4L7lyQNuWLvCQHrgXURsQW4FriE5lTcxRGxof2av9jRkyNiov36uZaXKFSSVEexEMrMW4CT\n5mm/HLh8gOdPAVNz2yJiFXCrk1UlqR86eYm2k1Ul9Z13VpUkqTBDSJJUjSEkSarGEJIkVWMISZKq\nMYQkaQi5dpwkSYV1MoScrCpJ/bDLFRMi4mzgU8DRwKnATZn5ttKF7YyTVSX1nZNVH/bMzEzgdcAL\ngCeVLUmSNCoGCaEnRMRLgK+1q1/vXbgmSdKIGCSEpoBXAu+NiKOBq8qWJEkaFYOsov2yzHxzu30H\n8PmC9UiSRsggIfTUiFgHfG+2ITMvKleSJGlUDBJCnn6TJBUxyHtCVwErgScDVwP/XrQiSdLIGCSE\nLgP+BzgEeBBYV7QiSZLL9sxxT2ZeCfwoM+8G7ipc0y45WVVS3zlZ9WF7RMRZwKqI+ENgz8I1SZJG\nxCAhtAb4PvBpYGv7uSRJCzbI1XHvb/8dA/YFjoyIrcCGzNxcrDJJGmGj8rbDQMv2AN+huTLu28DP\nAt+kuWBBkqRHbZAQekxmXpSZn8nMi4EHMvMTwHTh2iRJPTfI6bjxiFhPs2LCAcDTIuIY4PFFK5Mk\n9d4gIfTrwIuAceAbwDtp3h96bcG6JEkjYJAQ+nj77xgwA0zQXCV3EfDVQnVJkkbAICH0beCzwC3A\ns2iOij5Os3LCy8uVtmPe3luS+mGQEHpiZs4uYvrtiHhVZn4xIraULGxnRuXSRUmja1RWTBgkhGYi\n4pM8fGHCWESsBu4uWpkkjbBRWTtulyGUmWsi4mk0FybclZnZPvTpopVJknpvh/OEIuIj7b8bgU8A\nFwP/GBFfXprSJEl9t8Mjocxc026+JjO/tTTlSJJGySArJpxbvApJ0kja6XtCETEOHBYRtwObaecK\nZeaRS1GcJKnfdnVhwlRmPntJKpEkjZxdhdCyiNgLHnmtYGZuK1fSrjlZVZL6YVch9Fzgn3lkCM0A\nLy5W0QCcrCqp75ys2vh8Zr5ySSqRJI2cXV0d979LUoUkaSTtNIQy87SlKkSSNHoGmSckSVpio7J2\nnCEkSarGEJIkVTPIrRx2W0QcDpwJTAObMvPCOY89HfgccERmbi6xf0lSN5Q6EjoDmMzMSeDYiFgG\nEBF7AmcDNyykcyerSlI/lAqhlZk53W5vBVa02+8B3gvct5DOnawqqe+crLowmyNiPDNvB/YFtkTE\nk2lujHcycDhwCnDejjqIiAlgYrvm5YXqlSRVUCqE1gPrImILcC1wSWZOAK8HiIinAB/eWQeZOQVM\nzW2LiFXArSUKliQtvSIhlJm3ACft5PE3lNivJKlbvERbklSNISRJqsYQkiRVYwhJkqoxhCRJ1XQy\nhFwxQVLfuYq2JEmFGUKSpGoMIUlSNYaQJKkaQ0iSVI0hJEmqxhCSJFXTyRBynpCkvhuVm9p1M4S8\ns6qknnOyqiRJhRlCkqRqDCFJUjWGkCSpGkNIklSNISRJqsYQkiRV08kQcrKqJPVDN0PIyaqSes4V\nEyRJKswQkiRVYwhJ0hBy7ThJkgozhCRJ1RhCkqRqDCFJUjWdDCEnq0pSP3QzhJysKkm90MkQkiT1\ngyEkSarGEJIkVWMISZKqMYQkaQi5irYkSYUZQpKkagwhSVI1nQwhJ6tK6jtv5SBJUmHLSnQaEYcD\nZwLTwKbMvLBtfzPwDGBv4KOZeV2J/UuSuqHUkdAZwGRmTgLHRsRs2H0lM9cC7waOL7RvSVJHlAqh\nlZk53W5vBVYAZOZNEbEfcBawvtC+JUkdUeR0HLA5IsYz83ZgX2ALPHSabi1wRmZu21kHETEBTGzX\nvLxEsZKkOkqF0HpgXURsAa4FLqEJlL8HrgfeGRFfz8y/3VEHmTkFTM1ti4hVwK2FapYkLbEiIZSZ\ntwAnzdN+WIn9SZK6qZOXaHtnVUl959pxQ8zJqpL6zsmqkiQVZghJkqoxhCRJ1RhCkqRqDCFJUjWG\nkCSpGkNIklRNJ0PIyaqS1A/dDCEnq0rqOVdMkCSpMENIkoaQy/ZIklSYISRJQ2hULsAyhCRJ1RhC\nkqRqDCFJUjWdDKFROVcqSX3XzRBysqqknvMSbUmSCjOEJEnVGEKSpGoMIUkaQi5gKklSYYaQJKka\nQ0iSVI0hJEmqppMh5IoJktQPnQwhSVI/GEKSpGoMIUlSNYaQJKkaQ0iSVI0hJEmqxhCSpCHk/YSG\nmPOEJKkfuhlC3llVknqhkyEkSeoHQ0iSVI0hJEmqxhCSJFVjCEmSqllWquOIOBw4E5gGNmXmhW37\n2cA4sC/w/sz8WqkaJEnDrVgIAWcAk5k5HRFXR8RF7f6OycxXRcSBwLuBUwrWIEmddPP3bubgPHhR\n+npg5gFu/u7NbLt3GwAnPOMEjv+F4xel74UqGUIrM3O63d4KrACWA3e2bbcBB+xmn48F2HrnVpb9\nsGTpklTXNV+6hmu+dE2Rvjd8dgOvfuarWX/c+gX3tXr16lU0Z7vufzTPL/lKvjkixjPzdppTb1va\n/T2xfXwV8L0dPTkiJoCJ7ZqfAHD9uus5iIMWvWBJGhUbr9rI6g+sXoyubgWeCnzn0Tx5rNTqAxFx\nKHA2Tfh8C3h2Zk5ExOnAU2iOjM7PzG/uRp97AF8BXgE8sPhVL7mrgF+rXcQicSzDybEMp76N5chH\neyTEzMxMpz4OPvjgL9WuwbE4lq58OJbh/HAsD394ibYkqRpDSJJUjSEkSaqmiyE0VbuAReRYhpNj\nGU6OZTgtaCzFro6TJGlXungkJEnqCUNIklSNISRJqsYQkiRV05lVQHd0a4guiIhnAucCtwMzwIPt\nxzjwVuAXgdcCPwb+LTOvqFTqwCLiSuDLNMsvdXIsEbECOB/4AXAH8CyaZaZWAm8CfhN4Ps3Cux/L\nzBsrlbpLEXEY8Ac049iT5ne7U9+XiNgbOAd4Tma+LCL+lJ2MAbgGuATYBOyTmWurFD6PecbyPmAv\nmrGcT3MA8NDrGfDnNFeZzf78rc3MH9WofXtzxnJUZh7Xth0D/Etm/vz2r83s5li6dCQ0e2uISeDY\niOhMgNIEz2mZ+RbgUOBnMvOtwIdobmXxFuCUzHwTsKZalQOKiEngC+2nXR7L7wF3AffTLKb7rcw8\nG7ge+A3gd9sXtrXA6dWqHMxLgcsz81zgl+jm92UZcAEwFhFPY9djeA1wdWaeA2yKiF+uU/a8HhpL\n+/l1mflHwN8Aq9nu9axtm/35u4Hm529YzI4FgIjYD/ht4Itt04LG0qUQmu/WEJ2Qmd/IzLsi4i3A\nZ2luYwGwGXgS8NjMfLBtG+pr5iPiV4Af0oTQGB0eC3AQcFNmvh24gp8ey4MAmXkfzdHQMLsSeFdE\n/DXN/3vnvi+ZuTUzf0DzczXOzsfADr5mKMwZy+znN0XEU2mO5C7jp1/P9ufhsdzGkI4lIsaA84C3\nzfmSBY2lSyG0OSLG2+3ZW0N0QkQsj4hLgP8APgY8uX3oKTR/gf9kzpHd2DxdDJMTaH7519D81fOC\ntr2LY7l9zvYdNLcXgYfHMgYQEXsC9y5pZbtvEji1PUq4m58eS5e+L9CEyq5+T26b52uGzezP0EuB\n02hOTW3jka9n+9GcyurCWI6iua/b6cBBEbGGBY6lM5NVt781RGb+VeWSBhYR59C8WM/eynys/dif\n5lD2UOB1NOe6b8jMK2vUuTsi4oU0Y9oLeBwdHEtEPAm4iOY+KHfSvHBvo/lFWktzGuFFNEdBl2Xm\n56oUOoCIeDFwIs04xmmC6LF06PsSEc+jGcOJwCdojth2OAbgX2neE/o+8ITMPK1C2fPabiyfpKn7\no+3Dnwe+SfM+y0OvZxFxKXAP7c9fZg7FHz7zfF/elZk/jojrMvO4+V6bd2csnQkhSVL/dOl0nCSp\nZwwhSVI1hpAkqRpDSJJUjSEkSarGEJIkVWMISYsoIj6yCH0cEhEfmqf9uRGxfqH9S8PEeULSoxAR\nF9PMBj+aZiWM+2lWLLhjEfq+GnjjnKVQ5j52GbA+M7++0P1Iw6BLi4BKQ2N2dn5EfAb4rTlra23M\nzCMi4hbg48ALgRuBxwPPA14OPIdmVfW7m67yvNl+I+JA4IHMnG6XepkA/g/4emZ+ALgcOBk4a2lG\nKpXl6ThpYWaXYJo1e2phrzZcLgX2z8x30KxPF8CfAG/IzN8BjoqI/ec8/0hgY7v9CuDSzFwDfKpt\n+zJNiEm9YAhJZcwusHvfnO2f0KyzdwBwQURsAPagWett1j40a25BE1YntEdbR7dt9wB7F6xbWlKG\nkFTGzlaq/i7N/VdOBn4f+Oqcx+6hCSKAg9rTfquBU9u2fWgWWZV6wfeEpIXZ0ZU987XPtB/vBv4u\nIrYC92XmxJyv2Qi8sd1+RkScRRM6N7VtRwD/udCipWHh1XHSkImIa4A1mXnXPI99GPizzPzvpa9M\nWnyejpOGzx/T3L3yESLiKOAeA0h94pGQJKkaj4QkSdUYQpKkagwhSVI1hpAkqRpDSJJUjSEkSarm\n/wFwq5T0ccMpywAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAaEAAAEoCAYAAADxF07SAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD5ZJREFUeJzt3X2MZfVZwPHvlGGhsgWy27IrLXUrNU8rIAulRWrTBrdK\no3R9Cak1hnZpYeIaTGGWsrSh2UqNoKyrIoZCpFRT38AmBZrU6LaEmqbGly4RBJ6is1WWYZmyG17U\nCgxc/zhnYFxnd+/uzJln7sz3k0z2zLlzz/lxmNzv/M6cOXeo1+shSVKFV1UPQJK0dBkhSVIZIyRJ\nKmOEJElljJAkqYwRkiSVGe5qwxFxLHAVcFZm/uS09R8GfhRYBnwhM+/pagySpIWty5nQMHDtDOsv\nzMyNwEbg8g73L0la4DqLUGbuzcxnZ3jopfbx52lmQ5KkJaqz03HTDM20MiKOBp47lA1FxDDwBmBX\nZk7OwdgkSYWGurptT0ScDVzQftwBrMjMiyPiF4H30MyCbs3Mb+zn+SPAyD6rlwGnja0fY3K5DZIk\ngN6W0tuvzTjR6PvJg3TvuIhYA+w0QpL0ikGOkJdoS5LKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUx\nQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMk\nSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKk\nMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSoz\n3MVGI2ItcAUwAezKzG3t+lHgOOBE4E8z854u9i9JGgxdzYQ2AaOZOQqcGxFTsXt3Zm4Bfh84v6N9\nS5IGRCczIWBVZk60y3uBFTSzou0RcRvNTOjqjvYtSRoQXc2ExiNidbu8EtjTLp+XmRcBF2CEJGnJ\n62omtBW4PiL2AF8BbgJGgH+OiGuA44G/ONAGImKkfc50yzoYqySpyFCv16seQ98iYg2wc2z9GJPL\nJ6uHI0kLQm9L6ev40Gye7CXakqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKk\nMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpj\nhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZI\nklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoMd7XhiFgLXAFMALsy\nc1u7/qeB9wJHArdm5o6uxiBJWti6nAltAkYzcxQ4NyKmgjdCE6bngCc63L8kaYHrMkKrMnOiXd4L\nrGiXTwGuA7YBV3e4f0nSAtdlhMYjYnW7vBLY0y5/NzN7wDPAUR3uX5K0wHX2OyFgK3B9ROwBvgLc\nRHMq7saIuK39mt/b35MjYqT9+umWdTFQSVKNoV6vVz2GvkXEGmDn2PoxJpdPVg9HkhaE3pbS1/Gh\n2TzZS7QlSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJEllDnrbnojYDHwJOAe4\nBLg3Mz/Z9cAkSYtfPzOht2ZmAh8C3gW8vtshSZKWin4idExEvBd4sL379bEdj0mStET0E6FbgPcD\nn4mIc4C7uh2SJGmp6OetHM7LzI+1y08A3+xwPJKkJaSfCL0pIq4HHp1akZk3dDckSdJS0U+EPP0m\nSepEP78TugtYBZwE3A38XacjkiQtGf1E6Fbg34BTgJeA6zsdkSRpyegnQk9n5heB72XmU8CTHY9J\nkrRE9BOhoyLiSmBNRPwqcHTHY5IkLRH9RGgD8DjwVWBv+7kkSbPWz9Vx17X/DgErgTMjYi9wW2aO\ndzYySdKi19dte4Dv0FwZNwYsB75Nc8GCJEmHrZ8IvSozb8jMr2XmjcCLmXkHMNHx2CRJi1w/p+NW\nR8RWmjsmnAicHBHvBF7d6cgkSYtePxH6OeA9wGrgYeBTNL8f+mCH45IkLQH9ROj29t8hoAeM0Fwl\ndwNwf0fjkiQtAf1EaAz4OvAA8MM0s6Lbae6c8L7uhiZJWuz6idDrMnPqJqZjEfEzmfkPEbGny4FJ\nkha/fiLUi4i/5JULE4YiYh3wVKcjkyQtegeNUGZuiIiTaS5MeDIzs33oq52OTJK06O3374Qi4vPt\nvzuAO4AbgT+PiG/Nz9AkSYvdfmdCmbmhXfxAZj4yP8ORJC0l/dwxYUvno5AkLUkH/J1QRKwGTouI\n3cA47d8KZeaZ8zE4SdLidrALE27JzNPnZSSSpCXnYBEajojX0MyAXpaZz3Q3JEnSUnGwCL0DuJP/\nG6Ee8OOdjUiStGQcLELfzMz3z8tIJElLzsGujvv3eRmFJGlJOmCEMvPS+RqIJGnp6efvhCRJ6oQR\nkiSVMUKSpDL9vJXDIYuItcAVwASwKzO3TXvszcA3gDMyc7yL/UuSBkNXM6FNwGhmjgLnRsQwQEQc\nDWwGtne0X0nSAOkqQqsyc6Jd3gusaJd/DfgM8HxH+5UkDZBOTscB4xGxOjN3AyuBPRFxEs0b410E\nrAUuBq7Z3wYiYgQY2Wf1so7GK0kqMNTr9eZ8oxFxKs1ptz3AI8DpmTky7fHPAVcf6u+EImINsHNs\n/RiTyyfncMSSNLh6W+b+dfwQDB38S/avk5lQZj4AXHiAxz/SxX4lSYPFS7QlSWWMkCSpjBGSJJUx\nQpKkMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMk\nSSpjhCRJZYyQJKmMEZIklTFCkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKk\nMkZIklTGCEmSyhghSVIZIyRJKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpj\nhCRJZYyQJKmMEZIklRnuYqMRsRa4ApgAdmXmtnb9x4C3AMcCf5SZf93F/iVJg6GrmdAmYDQzR4Fz\nI2Iqdvdl5kbg08BPdbRvSdKA6CpCqzJzol3eC6wAyMx7I+K1wJXA1o72LUkaEJ2cjgPGI2J1Zu4G\nVgJ74OXTdBuBTZn5zIE2EBEjwMg+q5d1MVhJUo2hXq835xuNiFOBzTTxeQQ4PTNHIuJ+4G+AF4GH\nMvNzh7jdNcDOsfVjTC6fnONRS9Jg6m2Z+9fxQzA0myd3MhPKzAeAC2dYf1oX+5MkDSYv0ZYklTFC\nkqQyRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJ\nKmOEJElljJAkqYwRkiSVMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhCRJZYyQJKmMEZIklTFCkqQy\nRkiSVMYISZLKGCFJUhkjJEkqY4QkSWWMkCSpjBGSJJUxQpKkMkZIklTGCEmSyhghSVIZIyRJKmOE\nJElljJAkqYwRkiSVMUKSpDJGSJJUZrirDUfEWuAKYALYlZnb2vWbgdXASuC6zHywqzFIkha2LmdC\nm4DRzBwFzo2I4Yg4GnhnZl4OfBIY7XD/kqQFrrOZELAqMyfa5b3ACmAZ8N123WPAiYe4zSMAhv+7\ny2FL0mDZtWtX2b7XrVu3huZs1+ThPL/LV/PxiFidmbtpTr3taff3uvbxNcCj+3tyRIwAI/usPgbg\njdvfOOeDlaRBte6udZW73wm8CfjO4Tx5qNfrzelopkTEqcBmmvg8ApyemSMRcTnwAzQzo1/PzG8f\nwjaPAu4DzgdenPtRq3UXsL56EIucx3h+eJy7dxdw5uHOhDqLUFci4h8z86zqcSxmHuPueYznh8e5\ne7M9xl6iLUkqY4QkSWWMkCSpzCBG6JbqASwBHuPueYznh8e5e7M6xgN3YYIkafEYxJmQJGmRMEKS\npDJGSJJUxghJksoMzJ1A9/fWEDp8EfFh4IPAwzQ3mT0eeInmrTY+DvxI+/j/AH+bmX9WNNSBExHH\nAlcBb8vM8yLitznAsQW+DNwE7AKOy8yNJQMfIDMc4/uAe9qH/wSYZNprBvC7NFdy7QFWARsz83vz\nPvABExFvBbYAu4EezffxnH0vD9JM6P+9NUT1gBaJ/6S5D99u4Psy8+PAZ4GLgcuAizPzV4ANZSMc\nTMPAtcBQRJzMwY/tB4C7M/MqYFdE/FjNsAfKy8e4/fwF4Bmau/WPs89rBrAOeCQzNwPbgZ+f9xEP\nph5waWZeBpzKHH8vD9IL+UxvDTFxgK/Xwd0J3JmZT0XEduDedv048HrgiMx8qV3ntfyHIDP3AkTE\nEM1PjI+1D810bGm/Zt/jrwOYdoynVv1CZo5FxJuBTwEn7POacQKv/H94DHj7PA53YGXmwwARcRnw\ndV55LZiT7+VBmgmNR8TqdnnqrSE0OwEc2S6/SPP2GtDc5fxR4IVpM84hdLjGgZPa5f0d28dm+Br1\nZygijgR+qP38WeAo4PGI+P523Wtpfmj1GB+iiFgWETcBfw98gTn+Xh6YP1bd960hMvMPioc08CLi\n7cAngH8FnqOZGR9J8xPjJpqp94dozvVuz8wvFg114ETE2cAF7ccdND89HsF+ji3wVzTn0R8HjsnM\nSwuGPVBmOMYraQJ0PPBbNC+IVzHtNSMibgaeponSxsx8rmLsgyQirgLeBTzYrhpqP+bke3lgIiRJ\nWnwG6XScJGmRMUKSpDJGSJJUxghJksoYIUlSGSMkSSpjhKQ5FBGfn4NtnBIRn51h/TsiYutsty8t\nJP6dkHQYIuJGmr8GP4fmL8kngUsy84k52PbdwEen3XJm+mO3Alsz86HZ7kdaCAbp3nHSgjH1V+AR\n8TWae5Y9236+IzPPiIgHgNuBd9Pc2fnVwNnA+4C30dyV+KlmU3nN1HYj4g3Ai5k5ERE/AYwA/wU8\nlJm/SXN36IuAK+fnv1TqlqfjpNmZuoXJlKlTC69p43IzzY00rwaeoLlf328AH8nMXwLOiogTpj3/\nTGBHu3w+cHNmbgC+1K77Fk3EpEXBCEndmLrB7vPTll+guTfficC1EXEbzY02V0973nE09zaDJlY/\n2862zmnXPQ0c2+G4pXllhKRuHOiu4/9B8z43FwG/DNw/7bGnaUIE8IPtab91wCXtuuNo3jNHWhT8\nnZA0O/u7smem9b3249PAH0fEXuD5zByZ9jU7gI+2y2+JiCtpojP1/ixnAP8020FLC4VXx0kLTER8\nGdiQmU/O8NgfAr+Tmf8y/yOT5p6n46SF5xPANfuujIizgKcNkBYTZ0KSpDLOhCRJZYyQJKmMEZIk\nlTFCkqQyRkiSVMYISZLK/C9zRLgXcDJ26QAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x6dbe250>"
+       "<matplotlib.figure.Figure at 0x4223d90>"
       ]
      },
      "metadata": {},
@@ -430,6 +430,15 @@
     "#plt.xlim([0, .5])\n",
     "sns.despine()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
